Fix icon spacing

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -205,20 +205,9 @@ pre {
 }
 
 .social-media-list {
-  .icon {
+  .svg-icon {
     padding-right: 5px;
   }
-
-  li + li {
-    padding-top: 5px;
-  }
-}
-
-.social-media-list {
-  .icon {
-    padding-right: 5px;
-  }
-
   li + li {
     padding-top: 5px;
   }
